tests/compile_fail/effectful_stateful_handler_effect_missing_from_manifest.rs
#[path = "support/typed_effectful.rs"]
mod support;
use support::{First, Input, StatefulAllowsFirstEffect};

fn main() {
    let _ = obzenflow_dsl::effectful_stateful!(
        Input -> { First } => StatefulAllowsFirstEffect,
        effects: [],
        middleware: []
    );
}
